--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="zh-cn">
 <head>
     <meta charset="UTF-8">
-    <title>高考志愿参考——广东理科 By Ye1Ye</title>
-    <h1>广东理科</h1>
+    <title>高考志愿参考——北京理科 By Ye1Ye</title>
+    <h1>北京理科</h1>
     <h2>数据量有、大，初始加载需耐心等待！  使用搜索和高亮，也请输入后点击对应按钮后耐心等待！</h2>
     <style>
         table {
@@ -370,7 +370,7 @@ document.addEventListener('DOMContentLoaded', function() {
     document.getElementById('toggle-darkmode').addEventListener('click', toggleDarkMode);
 
     // 读取CSV文件并填充数据表
-    readFixedCSV('GuangdongLi.csv', populateTable);
+    readFixedCSV('BeijingLi.csv', populateTable);
 
     // 数据表排序事件
     var ths = document.querySelectorAll('#data-table th');
